# dewaffle

./: .gitignore  LICENSE  README.md
.github/workflows/: dewaffle-api-build-test.yml
dewaffle-api/: README.md  lambda.Dockerfile  local.Dockerfile  pyproject.toml
dewaffle-api/app/: main.py
dewaffle-api/app/api/v0/: api.py
dewaffle-api/app/api/v0/endpoints/: recipies.py
dewaffle-api/dewaffle_api/: main.py  schema.py
dewaffle-api/tests/: test_example.py
