[tool.poetry]
name = "dewaffle-api"
version = "0.1.0"
description = ""
authors = ["Sean McNamara <stmcnamara26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
