[tool.poetry]
name = "dewaffle-api"
version = "0.1.0"
description = ""
authors = ["Sean McNamara <stmcnamara26@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
pydantic = "^2.6.4"


[tool.poetry.scripts]
start = "dewaffle_api.main:start"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
black = "^24.4.0"
isort = "^5.13.2"

[tool.black]
line-length = 79

[tool.isort]
line_length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
